@@ -525,6 +525,9 @@ Release 0.21.1 - Unreleased
     HDFS-1786. Some cli test cases expect a "null" message
     (Uma Maheswara Rao G via todd)
 
+    HDFS-1855. TestDatanodeBlockScanner.testBlockCorruptionRecoveryPolicy()
+    part 2 fails in two different ways. (Matt Foley via eli)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
